fix map overflow

--- a/2018/09/entertainment-guide/style.css
+++ b/2018/09/entertainment-guide/style.css
@@ -1,13 +1,18 @@
-#map {
-  width: 100%;
-  height: 100vh;
-  padding: 0 0 0 0;
+.map-container {
+  display: flex;
+  flex-direction: row;
 }
 
-#listings {
+.map {
+  width: 66.6667%;
   height: 100vh;
-  overflow-y: scroll;
-  padding: 0 0 0 0;
+}
+
+.listings {
+  width: 33.3333%;
+  height: 100vh;
+  padding: 20px;
+  overflow-y: auto;
 }
 
 .marker {
@@ -17,33 +22,26 @@
 }
 
 .item {
-  border: 1px black solid
+  border: 1px solid #000;
+  margin-bottom: 20px;
 }
 
 .item div {
-  margin-bottom: 50px;
+  border-bottom: 1px solid #000;
 }
-
-body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
-@media only screen and (max-width: 1000px) {
-
-}
-
 
 @media only screen and (max-width: 768px) {
-  #map {
+  .map-container {
+    flex-direction: column;
+  }
+
+  .map {
+    width: 100%;
     height: 65vh;
   }
 
-  #listings {
+  .listings {
+    width: 100%;
     height: 35vh;
   }
-}
-
-@media only screen and (max-width: 480px) {
-
 }
